# zstack-mcp-server

./: .gitignore  README.md  pyproject.toml  run_complex_tests_output.json
scripts/: run_complex_tests.py  run_integration_tests.py
skills/vm-network-diagnose/: SKILL.md
src/zstack_mcp/: __init__.py  api_search.py  metric_search.py  server.py  zstack_client.py
src/zstack_mcp/data/: api_docs.json  zs_all_metric_metadata.json
tests/: test_auth_refactor.py  test_mcp_transports.py  test_metric_search.py  test_metric_summary.py  test_session_manager.py  test_zstack_client_metric_normalize.py
