[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zstack-mcp-server"
version = "0.1.6"
description = "MCP Server for ZStack Cloud API - enables AI to dynamically query and execute 2000+ ZStack APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ZStack", email = "support@zstack.io" }
]
keywords = ["zstack", "mcp", "cloud", "api", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
zstack-mcp-server = "zstack_mcp.server:main"

[tool.hatch.build]
exclude = ["articles", "skills", ".claude"]

[tool.hatch.build.targets.wheel]
packages = ["src/zstack_mcp"]

[tool.hatch.envs.default]
python = "3.11"

